add btn reverse
add a button to reverse the character picture

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <input id="j1" type="text" value="J1">
         <h3>Joueur 2</h3>
         <input id="j2" type="text" value="J2">
-        <h3>Personnage</h3>
+        <div>
+            <h3>Personnage</h3>
+            <button type="button" id="reverse-j1">Reverse</button>
+        </div>
         <div class="select-char" id="char1">
             <!-- first line-->
             <img class="stocks j1" id="mario" src="img/char/mario/stock_mario_00.png">
@@ -125,7 +128,10 @@
             <img class="stocks j1" id="miiswordsman" src="img/char/mii/stock_miiswordsman_02.png">
             <img class="stocks j1" id="miigunner" src="img/char/mii/stock_miigunner_01.png">
         </div>
-        <h3>Personnage</h3>
+        <div>
+            <h3>Personnage</h3>
+            <button type="button" id="reverse-j2">Reverse</button>
+        </div>
         <div class="select-char" id="char2">
             <!-- first line-->
             <img class="stocks j2" id="mario" src="img/char/mario/stock_mario_00.png">
