--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div id="menu-top">VoDs Thumbnails Generator for Smash Ultimate</div>
     <div id="main">
         <div id="thumbnail">
-            <div class="banner"><span id="name-j1">J1</span></div>
-            <div class="banner"><span id="name-j2">J2</span></div>
-            <div class="character">
+            <div class="banner" id="banner-j1"><span id="name-j1">J1</span></div>
+            <div class="banner" id="banner-j2"><span id="name-j2">J2</span></div>
+            <div class="character" id="div-j1">
                 <img id="char-j1" src="img/char/cloud/cloud_00.png">
             </div>
-            <div class="character">
+            <div class="character" id="div-j2">
                 <img id="char-j2" src="img/char/daisy/daisy_00.png">
             </div>
             <div class="banner" id="phase"><span>Winner</span></div>
