css + toggle class on click
bigger stock icon + border stay when click

--- a/index.html
+++ b/index.html
@@ -218,25 +218,25 @@
         </div>
         <h3>Couleur</h3>
         <div class="select-color" id="color-char1">
-            <img class="color-stocks" data-char="mario" id="j1-00" src="img/char/mario/stock_mario_00.png">
-            <img class="color-stocks" data-char="mario" id="j1-01" src="img/char/mario/stock_mario_01.png">
-            <img class="color-stocks" data-char="mario" id="j1-02" src="img/char/mario/stock_mario_02.png">
-            <img class="color-stocks" data-char="mario" id="j1-03" src="img/char/mario/stock_mario_03.png">
-            <img class="color-stocks" data-char="mario" id="j1-04" src="img/char/mario/stock_mario_04.png">
-            <img class="color-stocks" data-char="mario" id="j1-05" src="img/char/mario/stock_mario_05.png">
-            <img class="color-stocks" data-char="mario" id="j1-06" src="img/char/mario/stock_mario_06.png">
-            <img class="color-stocks" data-char="mario" id="j1-07" src="img/char/mario/stock_mario_07.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-00" src="img/char/mario/stock_mario_00.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-01" src="img/char/mario/stock_mario_01.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-02" src="img/char/mario/stock_mario_02.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-03" src="img/char/mario/stock_mario_03.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-04" src="img/char/mario/stock_mario_04.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-05" src="img/char/mario/stock_mario_05.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-06" src="img/char/mario/stock_mario_06.png">
+            <img class="color-stocks j1" data-char="mario" id="j1-07" src="img/char/mario/stock_mario_07.png">
         </div>
         <h3>Couleur</h3>
         <div class="select-color" id="color-char2">
-            <img class="color-stocks" data-char="mario" id="j2-00" src="img/char/mario/stock_mario_00.png">
-            <img class="color-stocks" data-char="mario" id="j2-01" src="img/char/mario/stock_mario_01.png">
-            <img class="color-stocks" data-char="mario" id="j2-02" src="img/char/mario/stock_mario_02.png">
-            <img class="color-stocks" data-char="mario" id="j2-03" src="img/char/mario/stock_mario_03.png">
-            <img class="color-stocks" data-char="mario" id="j2-04" src="img/char/mario/stock_mario_04.png">
-            <img class="color-stocks" data-char="mario" id="j2-05" src="img/char/mario/stock_mario_05.png">
-            <img class="color-stocks" data-char="mario" id="j2-06" src="img/char/mario/stock_mario_06.png">
-            <img class="color-stocks" data-char="mario" id="j2-07" src="img/char/mario/stock_mario_07.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-00" src="img/char/mario/stock_mario_00.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-01" src="img/char/mario/stock_mario_01.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-02" src="img/char/mario/stock_mario_02.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-03" src="img/char/mario/stock_mario_03.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-04" src="img/char/mario/stock_mario_04.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-05" src="img/char/mario/stock_mario_05.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-06" src="img/char/mario/stock_mario_06.png">
+            <img class="color-stocks j2" data-char="mario" id="j2-07" src="img/char/mario/stock_mario_07.png">
         </div>
     </div>
 </body>
