add phase select

--- a/index.html
+++ b/index.html
@@ -238,6 +238,25 @@
             <img class="color-stocks j2" data-char="mario" id="j2-06" src="img/char/mario/stock_mario_06.png">
             <img class="color-stocks j2" data-char="mario" id="j2-07" src="img/char/mario/stock_mario_07.png">
         </div>
+        <h3>Phase</h3>
+        <div id="type_phase">
+            <form name="form_type_phase">
+                <label class="radio">
+                    <input type="radio" name="type_phase" value="Winner" checked>Winner</label>
+                <label class="radio">
+                    <input type="radio" name="type_phase" value="Loser">Loser</label>
+                <label class="radio">
+                    <input type="radio" name="type_phase" value="Grand">Grand</label>
+            </form>
+        </div>
+        <div id="select_phase">
+            <form name="form_select_phase">
+                <label class="radio"><input type="radio" name="phase" value="Round" checked>Round <input id="nb_round" type="text" name="nb_round" maxlength="2" size="1" value="1" /><br></label>
+                <label class="radio"><input type="radio" name="phase" value="Quarter">Quarter</label>
+                <label class="radio"><input type="radio" name="phase" value="Semi">Semi</label>
+                <label class="radio"><input type="radio" name="phase" value="Final">Final</label>
+            </form>
+        </div>
     </div>
 </body>
 <!--
