add 'pools' select phase + plural

--- a/index.html
+++ b/index.html
@@ -242,9 +242,11 @@
         <div id="type_phase">
             <form name="form_type_phase">
                 <label class="radio">
-                    <input type="radio" name="type_phase" value="Winner" checked>Winner</label>
+                    <input type="radio" name="type_phase" value="Pools" checked>Pools</label>
                 <label class="radio">
-                    <input type="radio" name="type_phase" value="Loser">Loser</label>
+                    <input type="radio" name="type_phase" value="Winners" checked>Winners</label>
+                <label class="radio">
+                    <input type="radio" name="type_phase" value="Losers">Losers</label>
                 <label class="radio">
                     <input type="radio" name="type_phase" value="Grand">Grand</label>
             </form>
@@ -252,9 +254,9 @@
         <div id="select_phase">
             <form name="form_select_phase">
                 <label class="radio"><input type="radio" name="phase" value="Round" checked>Round <input id="nb_round" type="text" name="nb_round" maxlength="2" size="1" value="1" /><br></label>
-                <label class="radio"><input type="radio" name="phase" value="Quarter">Quarter</label>
-                <label class="radio"><input type="radio" name="phase" value="Semi">Semi</label>
-                <label class="radio"><input type="radio" name="phase" value="Final">Final</label>
+                <label class="radio"><input type="radio" name="phase" value="Quarters">Quarters</label>
+                <label class="radio"><input type="radio" name="phase" value="Semis">Semis</label>
+                <label class="radio"><input type="radio" name="phase" value="Finals">Finals</label>
             </form>
         </div>
     </div>
