--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </div>
             <div class="banner" id="phase"><span>Winner</span></div>
             <div class="banner" id="phase2"><span>Round 1</span></div>
-            <div class="banner" id="versus">VS</div>
-        </div>
-        <div class="logo" id="logo_bas">
-            <img src="img/logo/SNE.png">
-        </div>
-        <div class="logo" id="logo_haut">
-            <img src="img/logo/TA.png">
+            <div class="logo" id="logo_haut">
+                <img src="img/logo/TA.png">
+            </div>
+            <div class="banner" id="versus"><span>VS</span></div>
+            <div class="logo" id="logo_bas">
+                <img src="img/logo/SNE.png">
+            </div>
         </div>
     </div>
     <div id="infos">
@@ -258,6 +258,15 @@
                 <label class="radio"><input type="radio" name="phase" value="Semis">Semis</label>
                 <label class="radio"><input type="radio" name="phase" value="Finals">Finals</label>
             </form>
+        </div>
+        <h3>Logos</h3>
+        <div class="select_logos" id="select_logo_haut">
+            <h3>Logo du haut</h3>
+            <input id="up_file" type="file" onchange="previewFile('logo_haut', 'up_file')"><br>
+        </div>
+        <div class="select_logos" id="select_logo_bas">
+            <h3>Logo du bas</h3>
+            <input id="down_file" type="file" onchange="previewFile('logo_bas', 'down_file')"><br>
         </div>
     </div>
 </body>
