accept only image/*

--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
         <h3>Logos</h3>
         <div class="select_logos" id="select_logo_haut">
             <h3>Logo du haut</h3>
-            <input id="up_file" type="file" onchange="previewFile('logo_haut', 'up_file')"><br>
+            <input id="up_file" type="file" onchange="previewFile('logo_haut', 'up_file')" accept='image/*'><br>
         </div>
         <div class="select_logos" id="select_logo_bas">
             <h3>Logo du bas</h3>
-            <input id="down_file" type="file" onchange="previewFile('logo_bas', 'down_file')"><br>
+            <input id="down_file" type="file" onchange="previewFile('logo_bas', 'down_file')" accept='image/*'><br>
         </div>
     </div>
 </body>
