--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="menu-top">VoDs Thumbnails Generator for Smash Ultimate</div>
     <div id="main">
         <div id="thumbnail">
-            <div class="banner" id="banner-j1"><span id="name-j1">J1</span></div>
-            <div class="banner" id="banner-j2"><span id="name-j2">J2</span></div>
+            <div class="banner rotate-j1" id="banner-j1"><span id="name-j1">J1</span></div>
+            <div class="banner rotate-j2" id="banner-j2"><span id="name-j2">J2</span></div>
             <div class="character" id="div-j1">
                 <img id="char-j1" src="img/char/cloud/cloud_00.png">
             </div>
@@ -36,9 +36,15 @@
         </div>
     </div>
     <div id="infos">
-        <h3>Joueur 1</h3>
+        <div>
+            <h3>Joueur 1</h3>
+            <button type="button" id="rotate-j1">Rotate</button>
+        </div>
         <input id="j1" type="text" value="J1">
-        <h3>Joueur 2</h3>
+        <div>
+            <h3>Joueur 2</h3>
+            <button type="button" id="rotate-j2">Rotate</button>
+        </div>
         <input id="j2" type="text" value="J2">
         <div>
             <h3>Personnage</h3>
