--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="banner rotate-j1" id="banner-j1"><span id="name-j1">J1</span></div>
             <div class="banner rotate-j2" id="banner-j2"><span id="name-j2">J2</span></div>
             <div class="character" id="div-j1">
-                <img id="char-j1" src="img/char/cloud/cloud_00.png">
+                <img id="char-j1" class="reverse" src="img/char/link/link_02.png">
             </div>
             <div class="character" id="div-j2">
-                <img id="char-j2" src="img/char/daisy/daisy_00.png">
+                <img id="char-j2" class="reverse" src="img/char/ganon/ganon_03.png">
             </div>
             <div class="banner" id="phase"><span>Winner</span></div>
             <div class="banner" id="phase2"><span>Round 1</span></div>
@@ -54,7 +54,7 @@
             <!-- first line-->
             <img class="stocks j1" id="mario" src="img/char/mario/stock_mario_00.png">
             <img class="stocks j1" id="donkey" src="img/char/donkey/stock_donkey_00.png">
-            <img class="stocks j1" id="link" src="img/char/link/stock_link_00.png">
+            <img class="stocks j1 selected" id="link" src="img/char/link/stock_link_00.png">
             <img class="stocks j1" id="samus" src="img/char/samus/stock_samus_00.png">
             <img class="stocks j1" id="samusd" src="img/char/samusd/stock_samusd_00.png">
             <img class="stocks j1" id="yoshi" src="img/char/yoshi/stock_yoshi_00.png">
@@ -166,7 +166,7 @@
             <img class="stocks j2" id="marth" src="img/char/marth/stock_marth_00.png">
             <img class="stocks j2" id="lucina" src="img/char/lucina/stock_lucina_00.png">
             <img class="stocks j2" id="younglink" src="img/char/younglink/stock_younglink_00.png">
-            <img class="stocks j2" id="ganon" src="img/char/ganon/stock_ganon_00.png">
+            <img class="stocks j2 selected" id="ganon" src="img/char/ganon/stock_ganon_00.png">
             <!-- third line-->
             <img class="stocks j2" id="mewtwo" src="img/char/mewtwo/stock_mewtwo_00.png">
             <img class="stocks j2" id="roy" src="img/char/roy/stock_roy_00.png">
@@ -224,25 +224,25 @@
         </div>
         <h3>Couleur</h3>
         <div class="select-color" id="color-char1">
-            <img class="color-stocks j1" data-char="mario" id="j1-00" src="img/char/mario/stock_mario_00.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-01" src="img/char/mario/stock_mario_01.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-02" src="img/char/mario/stock_mario_02.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-03" src="img/char/mario/stock_mario_03.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-04" src="img/char/mario/stock_mario_04.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-05" src="img/char/mario/stock_mario_05.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-06" src="img/char/mario/stock_mario_06.png">
-            <img class="color-stocks j1" data-char="mario" id="j1-07" src="img/char/mario/stock_mario_07.png">
+            <img class="color-stocks j1" data-char="link" id="j1-00" src="img/char/link/stock_link_00.png">
+            <img class="color-stocks j1" data-char="link" id="j1-01" src="img/char/link/stock_link_01.png">
+            <img class="color-stocks j1 selected" data-char="link" id="j1-02" src="img/char/link/stock_link_02.png">
+            <img class="color-stocks j1" data-char="link" id="j1-03" src="img/char/link/stock_link_03.png">
+            <img class="color-stocks j1" data-char="link" id="j1-04" src="img/char/link/stock_link_04.png">
+            <img class="color-stocks j1" data-char="link" id="j1-05" src="img/char/link/stock_link_05.png">
+            <img class="color-stocks j1" data-char="link" id="j1-06" src="img/char/link/stock_link_06.png">
+            <img class="color-stocks j1" data-char="link" id="j1-07" src="img/char/link/stock_link_07.png">
         </div>
         <h3>Couleur</h3>
         <div class="select-color" id="color-char2">
-            <img class="color-stocks j2" data-char="mario" id="j2-00" src="img/char/mario/stock_mario_00.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-01" src="img/char/mario/stock_mario_01.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-02" src="img/char/mario/stock_mario_02.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-03" src="img/char/mario/stock_mario_03.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-04" src="img/char/mario/stock_mario_04.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-05" src="img/char/mario/stock_mario_05.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-06" src="img/char/mario/stock_mario_06.png">
-            <img class="color-stocks j2" data-char="mario" id="j2-07" src="img/char/mario/stock_mario_07.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-00" src="img/char/ganon/stock_ganon_00.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-01" src="img/char/ganon/stock_ganon_01.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-02" src="img/char/ganon/stock_ganon_02.png">
+            <img class="color-stocks j2 selected" data-char="ganon" id="j2-03" src="img/char/ganon/stock_ganon_03.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-04" src="img/char/ganon/stock_ganon_04.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-05" src="img/char/ganon/stock_ganon_05.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-06" src="img/char/ganon/stock_ganon_06.png">
+            <img class="color-stocks j2" data-char="ganon" id="j2-07" src="img/char/ganon/stock_ganon_07.png">
         </div>
         <h3>Phase</h3>
         <div id="type_phase">
