remove reverse char by default

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="banner rotate-j1" id="banner-j1"><span id="name-j1">J1</span></div>
             <div class="banner rotate-j2" id="banner-j2"><span id="name-j2">J2</span></div>
             <div class="character" id="div-j1">
-                <img id="char-j1" class="reverse" src="img/char/link/link_02.png">
+                <img id="char-j1" class="" src="img/char/link/link_02.png">
             </div>
             <div class="character" id="div-j2">
-                <img id="char-j2" class="reverse" src="img/char/ganon/ganon_03.png">
+                <img id="char-j2" class="" src="img/char/ganon/ganon_03.png">
             </div>
             <div class="banner" id="phase"><span>Winner</span></div>
             <div class="banner" id="phase2"><span>Round 1</span></div>
