remove default logo by empty img

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <div class="character" id="div-j2">
                 <img id="char-j2" class="" src="img/char/ganon/ganon_03.png">
             </div>
-            <div class="banner" id="phase"><span>Winner</span></div>
+            <div class="banner" id="phase"><span>Winners</span></div>
             <div class="banner" id="phase2"><span>Round 1</span></div>
             <div class="logo" id="logo_haut">
-                <img src="img/logo/TA.png">
+                <img src="">
             </div>
             <div class="banner" id="versus"><span>VS</span></div>
             <div class="logo" id="logo_bas">
-                <img src="img/logo/SNE.png">
+                <img src="">
             </div>
         </div>
     </div>
