test dom to image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div id="menu-top">VoDs Thumbnails Generator for Smash Ultimate</div>
     <div id="main">
+        <!--        TODO un canvas a la place directement ?-->
         <div id="thumbnail">
             <div class="banner rotate-j1" id="banner-j1"><span id="name-j1">J1</span></div>
             <div class="banner rotate-j2" id="banner-j2"><span id="name-j2">J2</span></div>
@@ -35,6 +36,7 @@
             </div>
         </div>
     </div>
+    <button type="button" id="download">Récupérer l'image</button>
     <div id="infos">
         <div>
             <h3>Joueur 1</h3>
@@ -280,6 +282,7 @@
 <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 -->
+<script src="js/dom-to-image.min.js"></script>
 <script src="js/thumbnail.js"></script>
 
 </html>
