--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <link rel="stylesheet" href="css/main.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+
+    <!-- font NES -->
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <!-- latest NES CSS -->
+    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+    <!-- icon material -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
     <div id="menu-top">VoDs Thumbnails Generator for Smash Ultimate</div>
     <div id="main">
-        <!--        TODO un canvas a la place directement ?-->
-        <div id="thumbnail">
+        <div id="thumbnail" style="margin: auto;">
             <div class="banner rotate-j1" id="banner-j1"><span id="name-j1">J1</span></div>
             <div class="banner rotate-j2" id="banner-j2"><span id="name-j2">J2</span></div>
-            <div class="character" id="div-j1">
+            <div class="character background-j1-1" id="div-j1">
                 <img id="char-j1" class="" src="img/char/link/link_02.png">
             </div>
-            <div class="character" id="div-j2">
+            <div class="character background-j2-2" id="div-j2">
                 <img id="char-j2" class="" src="img/char/ganon/ganon_03.png">
             </div>
             <div class="banner" id="phase"><span>Winners</span></div>
@@ -36,21 +42,103 @@
             </div>
         </div>
     </div>
-    <button type="button" id="download">Récupérer l'image</button>
+    <div class="center" style="margin-bottom: 10px; "><button type="button" id="download"><i class="material-icons">save_alt</i> Récupérer l'image</button>
+    </div>
     <div id="infos">
-        <div>
-            <h3>Joueur 1</h3>
-            <button type="button" id="rotate-j1">Rotate</button>
+        <div class="center">
+            <!--            <h3 class="nes-text">Joueur 1</h3>-->
+            <!--            <span class="nes-text">Joueur 1</span>-->
+            <button type="button" id="rotate-j1"><i class="material-icons">cached</i></button>
         </div>
-        <input id="j1" type="text" value="J1">
-        <div>
-            <h3>Joueur 2</h3>
-            <button type="button" id="rotate-j2">Rotate</button>
+        <div class="nes-field is-inline">
+            <input class="nes-input" id="j1" type="text" value="J1">
         </div>
-        <input id="j2" type="text" value="J2">
-        <div>
-            <h3>Personnage</h3>
-            <button type="button" id="reverse-j1">Reverse</button>
+        <div class="center">
+            <!--            <h3>Joueur 2</h3>-->
+            <!--            <span class="nes-text">Joueur 2</span>-->
+            <button type="button" id="rotate-j2"><i class="material-icons">cached</i></button>
+        </div>
+        <div class="nes-field is-inline">
+            <!--            <label for="inline_field">Joueur 2</label>-->
+            <input class="nes-input" id="j2" type="text" value="J2">
+        </div>
+        <span class="center nes-text">Couleur fond</span>
+        <div id="color-background-j1">
+            <form name="form_background_color_j1">
+                <label class="background-j1-1">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="1" checked />
+                    <span>1</span>
+                </label>
+                <label class="background-j1-2">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="2" />
+                    <span>2</span>
+                </label>
+                <label class="background-j1-3">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="3" />
+                    <span>3</span>
+                </label>
+                <label class="background-j1-4">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="4" />
+                    <span>4</span>
+                </label>
+                <label class="background-j1-5">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="5" />
+                    <span>5</span>
+                </label>
+                <label class="background-j1-6">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="6" />
+                    <span>6</span>
+                </label>
+                <label class="background-j1-7">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="7" />
+                    <span>7</span>
+                </label>
+                <label class="background-j1-8">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="8" />
+                    <span>8</span>
+                </label>
+            </form>
+        </div>
+        <span class="center nes-text">Couleur fond</span>
+        <div id="color-background-j2">
+            <form name="form_background_color_j2">
+                <label class="background-j2-1">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="1" />
+                    <span>1</span>
+                </label>
+                <label class="background-j2-2">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="2" checked />
+                    <span>2</span>
+                </label>
+                <label class="background-j2-3">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="3" />
+                    <span>3</span>
+                </label>
+                <label class="background-j2-4">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="4" />
+                    <span>4</span>
+                </label>
+                <label class="background-j2-5">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="5" />
+                    <span>5</span>
+                </label>
+                <label class="background-j2-6">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="6" />
+                    <span>6</span>
+                </label>
+                <label class="background-j2-7">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="7" />
+                    <span>7</span>
+                </label>
+                <label class="background-j2-8">
+                    <input type="radio" class="nes-radio is-dark" name="background_color" value="8" />
+                    <span>8</span>
+                </label>
+            </form>
+        </div>
+        <div class="center">
+            <!--            <span class="nes-text">Personnage</span>-->
+            <button type="button" id="reverse-j1"><i class="material-icons">compare_arrows</i></button>
         </div>
         <div class="select-char" id="char1">
             <!-- first line-->
@@ -136,9 +224,9 @@
             <img class="stocks j1" id="miiswordsman" src="img/char/mii/stock_miiswordsman.png">
             <img class="stocks j1" id="miigunner" src="img/char/mii/stock_miigunner.png">
         </div>
-        <div>
-            <h3>Personnage</h3>
-            <button type="button" id="reverse-j2">Reverse</button>
+        <div class="center">
+            <!--            <span class="nes-text">Personnage</span>-->
+            <button type="button" id="reverse-j2"><i class="material-icons">compare_arrows</i></button>
         </div>
         <div class="select-char" id="char2">
             <!-- first line-->
@@ -224,7 +312,7 @@
             <img class="stocks j2" id="miiswordsman" src="img/char/mii/stock_miiswordsman.png">
             <img class="stocks j2" id="miigunner" src="img/char/mii/stock_miigunner.png">
         </div>
-        <h3>Couleur</h3>
+        <span class="center nes-text">Costume</span>
         <div class="select-color" id="color-char1">
             <img class="color-stocks j1" data-char="link" id="j1-00" src="img/char/link/stock_link_00.png">
             <img class="color-stocks j1" data-char="link" id="j1-01" src="img/char/link/stock_link_01.png">
@@ -235,7 +323,7 @@
             <img class="color-stocks j1" data-char="link" id="j1-06" src="img/char/link/stock_link_06.png">
             <img class="color-stocks j1" data-char="link" id="j1-07" src="img/char/link/stock_link_07.png">
         </div>
-        <h3>Couleur</h3>
+        <span class="center nes-text">Costume</span>
         <div class="select-color" id="color-char2">
             <img class="color-stocks j2" data-char="ganon" id="j2-00" src="img/char/ganon/stock_ganon_00.png">
             <img class="color-stocks j2" data-char="ganon" id="j2-01" src="img/char/ganon/stock_ganon_01.png">
@@ -246,34 +334,33 @@
             <img class="color-stocks j2" data-char="ganon" id="j2-06" src="img/char/ganon/stock_ganon_06.png">
             <img class="color-stocks j2" data-char="ganon" id="j2-07" src="img/char/ganon/stock_ganon_07.png">
         </div>
-        <h3>Phase</h3>
+        <span class="center nes-text">Phase</span>
         <div id="type_phase">
             <form name="form_type_phase">
                 <label class="radio">
-                    <input type="radio" name="type_phase" value="Pools" checked>Pools</label>
+                    <input type="radio" class="nes-radio" name="type_phase" value="Pools"><span>Pools</span></label>
                 <label class="radio">
-                    <input type="radio" name="type_phase" value="Winners" checked>Winners</label>
+                    <input type="radio" class="nes-radio" name="type_phase" value="Winners" checked><span>Winners</span></label>
                 <label class="radio">
-                    <input type="radio" name="type_phase" value="Losers">Losers</label>
+                    <input type="radio" class="nes-radio" name="type_phase" value="Losers"><span>Losers</span></label>
                 <label class="radio">
-                    <input type="radio" name="type_phase" value="Grand">Grand</label>
+                    <input type="radio" class="nes-radio" name="type_phase" value="Grand"><span>Grand</span></label>
             </form>
         </div>
         <div id="select_phase">
             <form name="form_select_phase">
-                <label class="radio"><input type="radio" name="phase" value="Round" checked>Round <input id="nb_round" type="text" name="nb_round" maxlength="2" size="1" value="1" /><br></label>
-                <label class="radio"><input type="radio" name="phase" value="Quarters">Quarters</label>
-                <label class="radio"><input type="radio" name="phase" value="Semis">Semis</label>
-                <label class="radio"><input type="radio" name="phase" value="Finals">Finals</label>
+                <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Round" checked><span>Round </span><input id="nb_round" type="text" name="nb_round" maxlength="2" size="1" value="1" /><br></label>
+                <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Quarters"><span>Quarters</span></label>
+                <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Semis"><span>Semis</span></label>
+                <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Finals"><span>Finals</span></label>
             </form>
         </div>
-        <h3>Logos</h3>
         <div class="select_logos" id="select_logo_haut">
-            <h3>Logo du haut</h3>
+            <span class="center nes-text">Logo haut : </span>
             <input id="up_file" type="file" onchange="previewFile('logo_haut', 'up_file')" accept='image/*'><br>
         </div>
         <div class="select_logos" id="select_logo_bas">
-            <h3>Logo du bas</h3>
+            <span class="center nes-text">Logo bas : </span>
             <input id="down_file" type="file" onchange="previewFile('logo_bas', 'down_file')" accept='image/*'><br>
         </div>
     </div>
