workaround wrapper for export margin into png

--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
             </div>
             <div class="banner" id="phase"><span>Winners</span></div>
             <div class="banner" id="phase2"><span>Round 1</span></div>
-            <div class="logo" id="logo_haut">
-                <img src="">
+            <div id="dom-wrap-haut">
+                <div class="logo" id="logo_haut">
+                    <img src="">
+                </div>
             </div>
             <div class="banner" id="versus"><span>VS</span></div>
-            <div class="logo" id="logo_bas">
-                <img src="">
+            <div id="dom-wrap-bas">
+                <div class="logo" id="logo_bas">
+                    <img src="">
+                </div>
             </div>
         </div>
     </div>
@@ -46,20 +50,15 @@
     </div>
     <div id="infos">
         <div class="center">
-            <!--            <h3 class="nes-text">Joueur 1</h3>-->
-            <!--            <span class="nes-text">Joueur 1</span>-->
             <button type="button" id="rotate-j1"><i class="material-icons">cached</i></button>
         </div>
         <div class="nes-field is-inline">
             <input class="nes-input" id="j1" type="text" value="J1">
         </div>
         <div class="center">
-            <!--            <h3>Joueur 2</h3>-->
-            <!--            <span class="nes-text">Joueur 2</span>-->
             <button type="button" id="rotate-j2"><i class="material-icons">cached</i></button>
         </div>
         <div class="nes-field is-inline">
-            <!--            <label for="inline_field">Joueur 2</label>-->
             <input class="nes-input" id="j2" type="text" value="J2">
         </div>
         <span class="center nes-text">Couleur fond</span>
