--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
             </div>
         </div>
     </div>
+    <!--    TODO btn plus gros/coloré-->
     <div class="center" style="margin-bottom: 10px; "><button type="button" id="download"><i class="material-icons">save_alt</i> Récupérer l'image</button>
     </div>
+    <!--    TODO trop a droite-->
     <div id="infos">
         <div class="center">
             <button type="button" id="rotate-j1"><i class="material-icons">cached</i></button>
@@ -348,6 +350,7 @@
         </div>
         <div id="select_phase">
             <form name="form_select_phase">
+                <!--                TODO autoriser que number-->
                 <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Round" checked><span>Round </span><input id="nb_round" type="text" name="nb_round" maxlength="2" size="1" value="1" /><br></label>
                 <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Quarters"><span>Quarters</span></label>
                 <label class="radio"><input type="radio" class="nes-radio" name="phase" value="Semis"><span>Semis</span></label>
