correction export bottom logo

--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
                 <div class="logo" id="logo_haut">
                     <img src="">
                 </div>
+                <div class="logo" id="logo_bas">
+                    <img src="">
+                </div>
             </div>
             <div class="banner" id="versus"><span>VS</span></div>
+            <!--
             <div id="dom-wrap-bas">
                 <div class="logo" id="logo_bas">
                     <img src="">
                 </div>
             </div>
+-->
         </div>
     </div>
     <div class="center" style="margin-bottom: 10px; "><button type="button" id="download"><i class="material-icons">save_alt</i> Récupérer l'image</button>
