add mouse pointer local

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <!-- icon material -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Custom NES css -->
+    <link rel="stylesheet" href="css/custom_nes.css">
 </head>
 
 <body>
