forgot plant + add Joker

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
             <img class="stocks j1" id="krool" src="img/char/krool/stock_krool_00.png">
             <img class="stocks j1" id="shizue" src="img/char/shizue/stock_shizue_00.png">
             <img class="stocks j1" id="gaogaen" src="img/char/gaogaen/stock_gaogaen_00.png">
+            <img class="stocks j1" id="packun" src="img/char/packun/stock_packun_00.png">
+            <img class="stocks j1" id="jack" src="img/char/jack/stock_jack_00.png">
             <img class="stocks j1" id="miifighter" src="img/char/mii/stock_miifighter.png">
             <img class="stocks j1" id="miiswordsman" src="img/char/mii/stock_miiswordsman.png">
             <img class="stocks j1" id="miigunner" src="img/char/mii/stock_miigunner.png">
@@ -317,6 +319,8 @@
             <img class="stocks j2" id="krool" src="img/char/krool/stock_krool_00.png">
             <img class="stocks j2" id="shizue" src="img/char/shizue/stock_shizue_00.png">
             <img class="stocks j2" id="gaogaen" src="img/char/gaogaen/stock_gaogaen_00.png">
+            <img class="stocks j2" id="packun" src="img/char/packun/stock_packun_00.png">
+            <img class="stocks j2" id="jack" src="img/char/jack/stock_jack_00.png">
             <img class="stocks j2" id="miifighter" src="img/char/mii/stock_miifighter.png">
             <img class="stocks j2" id="miiswordsman" src="img/char/mii/stock_miiswordsman.png">
             <img class="stocks j2" id="miigunner" src="img/char/mii/stock_miigunner.png">
