--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test Roaster</title>
+    <title>Smash Thumbnail Generator</title>
 
     <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-
     <link rel="stylesheet" href="css/main.css">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 
     <!-- font NES -->
@@ -375,6 +373,7 @@
             <input id="down_file" type="file" onchange="previewFile('logo_bas', 'down_file')" accept='image/*'><br>
         </div>
     </div>
+    <div class="footer back-color"></div>
 </body>
 <!--
 <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
